    (Closes: #370205)
  * debchange: can change urgency and distro using -D and -u flags
    (Closes: #373271)
  * debuild: check for either .orig.tar.gz or a .orig directory, as
    dpkg-source does (Closes: #366286)
  * dget: introduce --insecure option for allowing downloading from site
    with self-signed certificate (Closes: #393942)
  * uscan: fix handling of ftp directory listings with number-only
    directory names (Closes: #372609)
  * uscan: warn if no parentheses in one-term version 2/3 watchfile
    (Closes: #375557)
  * uupdate: handle ~ in version numbers (Closes: #397100)
  * who-uploads: add GPG key ID to "unrecognised key" message (Closes:
    #397293)

 -- Julian Gilbey <jdg@debian.org>  Mon,  6 Nov 2006 14:05:42 +0000

devscripts (2.9.22) unstable; urgency=low

  [ Julian Gilbey ]
  * Makefile: remove -ldl flag in libvfork linker line (from checklib
    output, see http://rerun.lefant.net/checklib)
  * control: make list render nicely with new aptitude list-handling
    facility (Closes: #388856)
  * bts: documentation for show usertag=...: s/user=/users=/
  * checkbashisms: make reasons for concern explicit, and show whole line
    of original script, not just matched fragment
  * dget: support ~ in package version numbers (Closes: #389482)
  * rmadison: make curl quiet (important when piping the output of
    rmadison)
  * who-uploads: don't bother with iconv -t option; it's the default
    behaviour anyway (see Bug#384835)

  [ Joshua Kwan ]
  * Remove myself from Uploaders. -ENOTIME :(

 -- Julian Gilbey <jdg@debian.org>  Wed, 11 Oct 2006 20:16:02 +0100

devscripts (2.9.21) unstable; urgency=low

  * bts: reportspam/spamreport can now take multiple bug numbers
  * bts: add support for forcemerge (Closes: #369050, #380041)
  * bts: always include "# Automatically generated email" message (thanks
    to Justin Pryzby for spotting this)
  * bts: chdir back to original directory after downloading files (Closes:
    #372546)