@@ -8,6 +8,15 @@ devscripts (2.9.23) UNRELEASED; urgency=low
     dpkg-source does (Closes: #366286)
   * dget: introduce --insecure option for allowing downloading from site
     with self-signed certificate (Closes: #393942)
+  * nmudiff: much improved behaviour:
+    - remove dependency on mutt (use /usr/sbin/sendmail instead)
+    - automatically mail the relevant bugs rather than submit a new bug
+      report; this can be changed using the --new command line option
+    - allow for aborting, changing the bug number submitted to and editing
+      the whole message
+    - checking for errors rather than making a mess of things
+    - cleaning up the manpage
+    (Closes: #378264, #386147, #370056)
   * uscan: fix handling of ftp directory listings with number-only
     directory names (Closes: #372609)
   * uscan: warn if no parentheses in one-term version 2/3 watchfile
@@ -16,7 +25,7 @@ devscripts (2.9.23) UNRELEASED; urgency=low
   * who-uploads: add GPG key ID to "unrecognised key" message (Closes:
     #397293)
 
- -- Julian Gilbey <jdg@debian.org>  Mon,  6 Nov 2006 14:05:42 +0000
+ -- Julian Gilbey <jdg@debian.org>  Mon,  6 Nov 2006 17:05:29 +0000
 
 devscripts (2.9.22) unstable; urgency=low
 
